--- a/core/landing/templates/base.html
+++ b/core/landing/templates/base.html
@@ -77,7 +77,7 @@
                   <li class="nav-item" id="services-navlink"><a href='{% url "services" %}' class="nav-link">Produtos</a></li>
                   {% comment %} <li class="nav-item" id="blog-navlink"><a href='{% url "blog" %}' class="nav-link">Blog</a></li> {% endcomment %}
                   <li class="nav-item" id="contact-navlink"><a href='{% url "contact" %}' class="nav-link">Contato</a></li>
-                  <li class="nav-item" id="contact-navlink"><a href='http://127.0.0.1:8000/preview/2' class="nav-link">Ubicaciones</a></li>
+                  <li class="nav-item" id="contact-navlink"><a href='https://www.oohcontroller.com.br/preview/3' class="nav-link">Ubicaciones</a></li>
                   <li class="nav-item" id="login-navlink"><a href='{% url "login" %}' class="nav-link">Login</a></li>
                 </ul>
               </div>
